tests/errors/ty_var_err/ty_var_err.c
#error ty_var_err.ty_var_err:7:18 Type mismatch: 'int' <> 'string'.
